--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "v-better-table",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "vue-better-table",
+  "version": "0.0.1",
+  "files": ["dist"],
+  "main": "./dist/vue-better-table.umd.js",
+  "module": "./dist/vue-better-table.es.js",  
+  "exports": {
+    ".": {
+      "import": "./dist/vue-better-table.es.js",
+      "require": "./dist/vue-better-table.umd.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
