--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "vue-better-table",
-  "version": "0.0.1",
-  "files": ["dist"],
+  "version": "0.0.2",
+  "files": [
+    "dist"
+  ],
   "main": "./dist/vue-better-table.umd.js",
-  "module": "./dist/vue-better-table.es.js",  
+  "module": "./dist/vue-better-table.es.js",
   "exports": {
     ".": {
       "import": "./dist/vue-better-table.es.js",
@@ -25,6 +27,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
+    "vite-plugin-css-injected-by-js": "^2.2.0",
     "vue": "^3.2.41"
   },
   "devDependencies": {
