--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "vue-better-table",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "files": [
     "dist"
   ],
+  "type": "module",
   "main": "./dist/vue-better-table.umd.js",
   "module": "./dist/vue-better-table.es.js",
   "exports": {
     ".": {
       "import": "./dist/vue-better-table.es.js",
       "require": "./dist/vue-better-table.umd.js"
+    },
+    "./style.css": {
+      "import": "./dist/style.css",
+      "require": "./dist/style.css"
     }
   },
   "scripts": {
@@ -32,6 +37,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
+    "sass": "^1.57.1",
     "vite": "^3.2.3"
   }
 }
